k8s_resources/12-Secrets-ConfigMap/Secrets/secret-basic.yaml
#This is the basic example of secret
# Encode and decode of secrets by Base64 with below command
#echo 'admin' | base64
#echo 'YWRtaW4K' | base64 -d
#echo 'cGFzc3dvcmQK' | base64 -d

---
#Configuring secret as part of example
apiVersion: v1
kind: Pod
metadata:
  name: nginx-secret-pod
spec:
  containers:
  - name: nginx-secret
    image: nginx
    volumeMounts:
    - name: nginx-secret
      mountPath: "/usr/share/nginx/html"
      readOnly: true
  volumes:
  - name: nginx-secret
    secret:
      secretName: mysecret
---

#commands to test
#kubectl exec nginx-secret-pod cat /usr/share/nginx/html
#kubectl exec nginx-secret-pod more /usr/share/nginx/html/username
#Output
#root@controlplane:~/secret-configmap# kubectl exec nginx-secret-pod more /usr/share/nginx/html/username
#kubectl exec [POD] [COMMAND] is DEPRECATED and will be removed in a future version. Use kubectl exec [POD] -- [COMMAND] instead.
#::::::::::::::
#/usr/share/nginx/html/username
#::::::::::::::
#admin
#root@controlplane:~/secret-configmap# kubectl exec nginx-secret-pod more /usr/share/nginx/html/password
#kubectl exec [POD] [COMMAND] is DEPRECATED and will be removed in a future version. Use kubectl exec [POD] -- [COMMAND] instead.
#::::::::::::::
#/usr/share/nginx/html/password
#::::::::::::::
#password
