k8s_resources/12-Secrets-ConfigMap/Secrets/tls_certs.yaml
Execute below command to create self signed cretificates:
openssl req -x509 -nodes -days 365 -newkey rsa:2048 -keyout tls.key -out tls.crt -subj "/CN=test.trainingxxxxdemo.tld"

Now store tls certificates in kubernetes secret tls resources:
1) ClI method:
  kubectl create secret tls my-certs --cert=tls.crt --key=tls.key
2) YAML method:
  apiVersion: v1
  data:
    tls.crt: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURKakNDQWc2Z0F3SUJBZ0lKQUw2Y3R2bk9zMzlUTUEwR0NTcUdTSWIzRFFFQkJRVUFNQll4RkRBU0JnTlYKQkFNVEMyWnZieTVpWVhJdVkyOXRNQjRYRFRFNE1USXhOREUxTWpJeU1Gb1hEVEU1TVRJeE5ERTFNakl5TUZvdwpGakVVTUJJR0ExVUVBeE1MWm05dkxtSmhjaTVqYjIwd2dnRWlNQTBHQ1NxR1NJYjNEUUVCQVFVQUE0SUJEd0F3CmdnRUtBb0lCQVFDbWVsQTNqVy9NZ2REejJNazMwbXZ4K2VOSHJkQlIwMEJ4ZUR1VjBjYWVFUGNFa2RmSnk5V28KaTFpSXV1V04vZGV6UEhyTWMxenBPNGtzbWU5NThRZVFCWjNmVThWeGpRYktmb1JzNnhQUlNKZVVSckVCcWE4SQpUSXpEVVdaUTAwQ2x [...]
    tls.key: LS0tLS1CRUdJTiBSU0EgUFJJVkFURSBLRVktLS0tLQpNSUlFb3dJQkFBS0NBUUVBcG5wUU40MXZ6SUhRODlqSk45SnI4Zm5qUjYzUVVkTkFjWGc3bGRIR25oRDNCSkhYCnljdlZxSXRZaUxybGpmM1hzeng2ekhOYzZUdUpMSm52ZWZFSGtBV2QzMVBGY1kwR3luNkViT3NUMFVpWGxFYXgKQWFtdkNFeU13MUZtVU5OQXBaWkZqYzlmTGV2MWRxNnBTTUZLSXVXRjhvZlVaWW5jZHVrSXF3S1VCSXJ3bkhkNwpnTmJLZEJOUk1CMDVWTU5ZeHpnNktTblpXUmNINm9SQjdIMitxUDloS0QrZGJOSEc1elZzOUxKVWZHcys3UEMxCkc4UUdjZ1FqN2V1WUhtanNWMkh0WW9Tbk44UnpkR3Z0ZGN3R2hndHMwczREYVJGY1VDQXNtTGxYc01ES0FKS2IKSGJXdHFJTnF [...]
  kind: Secret
  metadata:
    name: test-tls
    namespace: default
  type: kubernetes.io/tls

#We can use in Ingress
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx-inress
  namespace: default
spec:
  tls:
  - hosts:
    - test.trainingxxxxdemo.tld
    secretName: test-tls
  rules:
  - host: test.trainingxxxxdemo.tld
    http:
      paths:
      - backend:
          serviceName: nginx-service
          servicePort: 80
        path: /
===
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx-app-demo
spec:
  tls:
  - hosts:
    - nginx.example.com
    secretName: main-nginx
  - hosts:
    - blue.nginx.example.com
    secretName: blue-nginx
  - hosts:
    - green.nginx.example.com
    secretName: green-nginx
  rules:
  - host: nginx.example.com
    http:
      paths:
      - path: /
        backend:
          serviceName: nginx-deploy-main
          servicePort: 80
  - host: blue.nginx.example.com
    http:
      paths:
      - path: /
        backend:
          serviceName: nginx-deploy-blue
          servicePort: 80
  - host: green.nginx.example.com
    http:
      paths:
      - path: /
        backend:
          serviceName: nginx-deploy-green
          servicePort: 80
